fixed ':' spacing across the board, building stats

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ html, body {
 	background:#000;
 	color:#f2f2f2;
 	text-align:center;
-	font-family: 'Ubuntu', sans-serif;
+	font-family:'Ubuntu', sans-serif;
 	width:100%;
 }
 button, span {
@@ -11,7 +11,7 @@ button, span {
 	vertical-align:middle;
 }
 button {
-	margin: 10px 0 0 0;
+	margin:10px 0 0 0;
 }
 button img {
 	vertical-align:middle;
@@ -31,12 +31,12 @@ h1 {
   margin:10px 0;
 }
 h2 {
-  font-size: 28px;
-  margin: 10px 0;
+  font-size:28px;
+  margin:10px 0;
 }
 h3 {
-  font-size: 24px;
-  margin: 10px 0 20px;
+  font-size:24px;
+  margin:10px 0 20px;
 }
 strong {
   color:orange;
@@ -47,30 +47,33 @@ p, blockquote, ul li {
   color:#d5d5d5;
 }
 blockquote {
-  margin: 10px 40px 20px;
+  margin:10px 40px 20px;
   border-left:5px solid #777;
   padding-left:10px;
 }
 /* explanation */
 .drawer-trigger {
-	cursor: pointer;
+	cursor:pointer;
 }
 .drawer {
-	display: none;
+	display:none;
 }
 .explanation {
-  border: #666 1px solid;
-  background: #222;
-  border-radius: 5px;
-  text-align: left;
-  padding: 10px;
-  margin: 10px;
+  border:#666 1px solid;
+  background:#222;
+  border-radius:5px;
+  text-align:left;
+  padding:10px;
+  margin:10px;
+}
+.explanation h3 {
+	text-decoration:underline;
 }
 .explanation ul {
-  margin: 10px 0 10px;
+  margin:10px 0 10px;
 }
 .explanation ul li {
-  margin: 5px 20px;
+  margin:5px 20px;
 }
 .explanation strong {
   color:pink;
@@ -81,29 +84,32 @@ blockquote {
 	font-size:12px;
 	color:#f2f2f2;
 }
-.chart {
+.chart,
+.data-grid {
 	width:48%;
 	margin:10px;
 	background:#111;
 	display:inline-block;
 }
 .chart.full {
-  width: 98%;
+  width:98%;
 }
-.chart div {
+.chart div,
+.data-grid div {
 	margin:5px 10px 5px 0px;
 }
-.chart h3 {
+.chart h3,
+.data-grid h3  {
 	text-align:center;
 	font-size:16px;
 	background:#333;
 	color:#f2f2f2;
 	padding:5px 0;
 	font-weight:100;
-	margin: 0;
+	margin:0;
 }
 .chart .count {
-	font-size: 12px;
+	font-size:12px;
 }
 .c3-axis-x path,
 .c3-axis-x line,
@@ -112,8 +118,8 @@ blockquote {
 .c3-axis-x .tick,
 .c3-axis-y .tick,
 .c3-legend-item text {
-	stroke: #f2f2f2;
-	color: #f2f2f2;
+	stroke:#f2f2f2;
+	color:#f2f2f2;
 	font-size:12px;
 }
 .c3-tooltip {
@@ -127,10 +133,30 @@ blockquote {
 }
 /* pie chart */
 .pie .c3-chart-arc path {
-	stroke: #111;
+	stroke:#111;
 }
 .pie .c3-chart-arc text {
-	fill: #111;
+	fill:#111;
+}
+/* data grids */
+.data-grid {
+	width:50%;
+	margin:0 auto;
+}
+.grid {
+	display:flex;
+}
+.grid .entry {
+	flex:1;
+	min-height:100px;
+	width:30%;
+}
+.grid .entry .title {
+	display:block;
+}
+.grid .entry .count-label,
+.grid .entry .count-value {
+	display:inline-block;
 }
 /* alert section */
 .alert {
@@ -186,9 +212,9 @@ hr {
 	background-size:contain;
 	background-repeat:no-repeat;
 	vertical-align:middle;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
 }
 .grid .entry p {
 	font-size:10px;
